Fix zooming/scrolling with tied and shared plots.

In some cases, plots that were both tied and shared would get the
command twice.  This fixes that - hopefully without regressions.

BUG: 394742